build: Added functionality for fault tollerence in case of kafka not working