@@ -8,6 +8,7 @@ import net.LaabhGupta.journalApp.model.SentimentData;
 import net.LaabhGupta.journalApp.repository.UserRepositoryImpl;
 import net.LaabhGupta.journalApp.service.EmailService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 
@@ -16,9 +17,11 @@ import java.time.temporal.ChronoUnit;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Component
 public class UserScheduler {
+
 
     @Autowired
     private EmailService emailService;
@@ -29,43 +32,48 @@ public class UserScheduler {
     @Autowired
     private AppCache appCache;
 
-//    @Autowired
-//    private kafkaTemplate<String, SentimentData> kafkaTemplate;
+    @Autowired
+    private KafkaTemplate<String, SentimentData> kafkaTemplate;
 
     @Scheduled(cron = "0 0 9 * * SUN")
-    public void fetchUsersAndSendSaMail(){
+    public void fetchUsersAndSendSaMail() {
         List<User> users = userRepository.getUserForSA();
-        for(User user: users){
+        for (User user : users) {
             List<JournalEntry> journalEntries = user.getJournalEntries();
-            List<Sentiment> sentiments = journalEntries.stream()
-                    .filter(
-                            x -> x.getDate().isAfter(
-                                    LocalDateTime.now().minusDays(7)
-                            )
-                    )
-                    .map(JournalEntry::getSentiment)
-                    .toList();
+            List<Sentiment> sentiments = journalEntries.stream().filter(x -> x.getDate().isAfter(LocalDateTime.now().minus(7, ChronoUnit.DAYS))).map(x -> x.getSentiment()).collect(Collectors.toList());
             Map<Sentiment, Integer> sentimentCounts = new HashMap<>();
-            for(Sentiment sentiment: sentiments){
-                if(sentiment != null)
+            for (Sentiment sentiment : sentiments) {
+                if (sentiment != null)
                     sentimentCounts.put(sentiment, sentimentCounts.getOrDefault(sentiment, 0) + 1);
             }
             Sentiment mostFrequentSentiment = null;
             int maxCount = 0;
-            for(Map.Entry<Sentiment, Integer> entry : sentimentCounts.entrySet()){
-                if(entry.getValue() > maxCount){
+            for (Map.Entry<Sentiment, Integer> entry : sentimentCounts.entrySet()) {
+                if (entry.getValue() > maxCount) {
                     maxCount = entry.getValue();
                     mostFrequentSentiment = entry.getKey();
                 }
             }
-            if(mostFrequentSentiment != null){
-                emailService.sendEmail(user.getEmail(), "Sentiment for last day", mostFrequentSentiment.toString());
+            if (mostFrequentSentiment != null) {
+                SentimentData sentimentData = SentimentData
+                        .builder().email(
+                                user.getEmail()
+                        )
+                        .sentiment("Sentiment for last 7 days " + mostFrequentSentiment)
+                        .build();
+                try{
+                    kafkaTemplate.send("weekly-sentiments", sentimentData.getEmail(), sentimentData);
+                } catch (Exception e) {
+                    emailService.sendEmail(sentimentData.getEmail(), "Sentiment for previous week", sentimentData.getSentiment());
+                }
+
             }
         }
     }
 
     @Scheduled(cron = "0 0/10 * ? * *")
-    public void userAppCache(){
+    public void clearAppCache() {
         appCache.init();
     }
+
 }
